[gd_scene load_steps=5 format=3 uid="uid://db3pgflm4l0b4"]

[ext_resource type="Script" path="res://scenes/terminal_screen.gd" id="1_6dr6g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0ih0"]
bg_color = Color(0.290196, 0.494118, 0.647059, 0.772549)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5ve5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofy75"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="TerminalScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_6dr6g")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Content"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Label"
horizontal_alignment = 1

[node name="Body" type="PanelContainer" parent="Content/Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_v0ih0")

[node name="MarginContainer" type="MarginContainer" parent="Content/Content/Body"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="ListMessages" type="ItemList" parent="Content/Content/Body/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hovered_color = Color(0.129412, 0.211765, 0.396078, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_q5ve5")
theme_override_styles/focus = SubResource("StyleBoxFlat_ofy75")

[node name="ListQuests" type="RichTextLabel" parent="Content/Content/Body/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/line_separation = 4

[node name="LabelMessage" type="RichTextLabel" parent="Content/Content/Body/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/line_separation = 4
bbcode_enabled = true
text = "[b]Objet du message[/b]
Hello, bonjour !
"

[node name="HBoxContainer" type="HBoxContainer" parent="Content"]
layout_mode = 2
alignment = 1

[node name="ButtonQuests" type="Button" parent="Content/HBoxContainer"]
layout_mode = 2
text = "Quests"

[node name="ButtonMessages" type="Button" parent="Content/HBoxContainer"]
layout_mode = 2
text = "Messages"

[node name="HBoxContainer2" type="HBoxContainer" parent="Content"]
layout_mode = 2
alignment = 1

[node name="ButtonHomeTerm" type="Button" parent="Content/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "x"

[connection signal="item_clicked" from="Content/Content/Body/MarginContainer/ListMessages" to="." method="_on_list_messages_item_clicked"]
[connection signal="pressed" from="Content/HBoxContainer/ButtonQuests" to="." method="_on_button_quests_pressed"]
[connection signal="pressed" from="Content/HBoxContainer/ButtonMessages" to="." method="_on_button_list_messages_pressed"]
[connection signal="pressed" from="Content/HBoxContainer2/ButtonHomeTerm" to="." method="_on_button_back_pressed"]
